syntax="proto3";
package pkg.service_group.service_grouppb;

import "google/protobuf/wrappers.proto";
import "pkg/proto/utilpb/uuid.proto";
import "pkg/service/servicepb/service.proto";

option go_package = "github.com/ScoreTrak/ScoreTrak/pkg/service_group/service_grouppb";

message ServiceGroup {
  pkg.proto.utilpb.UUID id = 1;
  string name = 2;
  string display_name = 3;
  google.protobuf.BoolValue enabled = 4;
  bool skip_helper = 5;
  string label = 6;
  repeated pkg.service.servicepb.Service services = 7;
}

message GetAllRequest{}
message GetAllResponse{
  repeated ServiceGroup service_groups = 1;
}

message GetByIDRequest{
  pkg.proto.utilpb.UUID id = 1;
}
message GetByIDResponse{
  ServiceGroup service_group = 1;
}

message DeleteRequest{
  pkg.proto.utilpb.UUID id = 1;
}

message DeleteResponse{}

message StoreRequest{
  ServiceGroup service_group = 1;
}

message StoreResponse{
  pkg.proto.utilpb.UUID id = 1;
}

message UpdateRequest{
  ServiceGroup service_group = 1;
}

message UpdateResponse{}

message RedeployRequest{
  pkg.proto.utilpb.UUID id = 1;
}

message RedeployResponse{}

service ServiceGroupService{
  rpc GetAll(GetAllRequest) returns (GetAllResponse){}
  rpc GetByID(GetByIDRequest) returns (GetByIDResponse){}
  rpc Delete(DeleteRequest) returns (DeleteResponse){}
  rpc Store(StoreRequest) returns (StoreResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Redeploy(RedeployRequest) returns (RedeployResponse){}
}